syntax = "proto3";

option go_package = "github.com/sususaiasusubendera/common/api";

package api;

message Order {
    string id = 1;
    string customer_id = 2;
    string status = 3;
    repeated Item items = 4;
}

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (Order);
}

message Item {
    string id = 1;
    string name = 2;
    int32 quantity = 3;
    string price_id = 4;
}

message ItemWithQuantity {
    string id = 1;
    int32 quantity = 2;
}

message CreateOrderRequest {
    string customer_id = 1;
    repeated ItemWithQuantity items = 2;
}